# agendamento

./: .gitignore
backend/: .dockerignore  .env  .env.dev  .env.example  .env.prod  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.watch.yml  docker-compose.yml  pyproject.toml
backend/src/: config.py  main.py  tempCodeRunnerFile.py
backend/src/app/: __init__.py  app.py  db.py  healthcheck.py
backend/src/app/core/access/: module.py  routes.py  schemas.py  service.py
backend/src/app/core/access/resources/users/: models.py  resource.py  routes.py  schemas.py  service.py
backend/src/base/: app_module.py  model.py  repository.py  resource.py  schemas.py  service.py
backend/src/cli/: __init__.py  __main__.py  migration.py
backend/src/helpers/: db.py  email.py  logs.py  modules.py  password.py  register.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 1b08ce7a7c74_initial.py  202a208bafba_initial_users.py  b800f01db3c0_initial.py
backend/src/scripts/: dev.sh  healthchek.sh  run.sh  watch.sh
